--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,9 @@ python-multipart==0.0.6
 jinja2==3.1.3
 httpx==0.26.0
 cryptography==42.0.0
+bcrypt==4.1.2
+slowapi==0.1.9
 pytest==8.0.0
 pytest-cov==4.1.0
+pytest-asyncio==0.23.0
+respx==0.20.2
